--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,6 +23,9 @@ jobs:
           hugo-version: 'latest'
           extended: true
 
+      - name: Setup Submodules
+        run: git submodule update --init --recursive
+
       - name: Build
         run: hugo --minify
 
