reset the domain

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://www.kiteaid.com/'
+baseURL = 'https://swill.github.io/kiteaid_farewell/'
 languageCode = 'en-ca'
 title = 'KITEAID'
 
